--- a/index.Rmd
+++ b/index.Rmd
@@ -19,4 +19,26 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Preface {-}
 
-To be written
+Why learn R?
+
+- R is a general purpose computer language
+- R is the best for dealing with data
+- R has such a good IDE (Integrated Development Environment), RStudio
+- R has so many valuable/powerful packages
+- R has a very good ecosystem
+- R is free
+
+What to learn?
+
+- base R
+- R packages
+- workflows
+
+
+How to learn?
+
+- try to learn from the best resources 
+- grasp the basics
+- aim to problem solving with R
+- write many R scrips
+- learn incessantly
