--- a/lesson_2.Rmd
+++ b/lesson_2.Rmd
@@ -1,1 +1,45 @@
 # Lesson 2 Toy Examples {#L2}
+
+There are three toy examples; go through them one by one.
+Firstly, think about how to solve the problem by yourself; and then study the example R code.  
+
+**Example 1:** Write an R program to plot $f(x)=\sin(x)$ (black color) and $g(x)=\cos(x)$ (red color) together; $x$ takes values from $-2\pi$ to $2\pi$.
+
+```{r}
+x <- seq(-2*pi, 2*pi, by = 0.01)
+y_1 <- sin(x)
+y_2 <- cos(x)
+plot(x, y_1, type = 'l', col = 'black', xlab = 'x', ylab = 'y',
+     main = "Plot of sin(x) (black) and cos(x) (red)")
+points(x, y_2, type = 'l', col = 'red')
+abline(h = 0, lty = 2)
+abline(v = 0, lty = 2)
+```
+
+**Example 2:** Check all integers from 1 to 100: if an integer is multiple of 5, then output "F"; if the integer is multiple of 7, then output "S"; if it's multiple of both 5 and 7, then output "FS"; otherwise just output the integer.
+
+```{r}
+nbr <- 1:100
+output <- rep("", times = 100)
+for(i in nbr) {
+  s <- ""
+  if(i %% 5 == 0) s <- "F"
+  if(i %% 7 == 0) s <- paste0(s, "S")
+  if(s != "") {output[i] <- s
+  } else {output[i] <- i}
+}
+print(output)
+```
+
+**Example 3:** Write an **R function** to calculate how old you are in days.
+
+```{r, message=FALSE, warning=FALSE}
+library(lubridate) # to use function days()
+how_old_in_days <- function(`birth_day_yyyy-mm-dd`)
+{today <- Sys.Date()
+ life_in_days <- days(today - as.Date(`birth_day_yyyy-mm-dd`))
+ print(life_in_days)
+}
+how_old_in_days("2005-12-04") # today is "2022-12-25"
+```
+
