--- a/lesson_4.Rmd
+++ b/lesson_4.Rmd
@@ -37,13 +37,15 @@ $$
 $$
 Note that when converting from logical to integer, `TRUE` and `FALSE` become `1L` and `0L`, respectively.
 1. R function `length()` gives *length*---how many elements an atomic vector has.
-1. When two atomic-vector variables of different lengths are on "operation", R will firstly recycle the shorter variable. 
+1. When two atomic-vector variables of different lengths are on "operation", R will firstly recycle the shorter variable.
+1. We use `vec[index]` to get values from an atomic vector.
 
 **Examples:**
 ```{r}
 (a_logic_vec + an_integer_vec)
 print(c(an_integer_vec, a_double_vec))
 print(c(a_logic_vec, a_double_vec, a_character_vec))
+print(a_character_vec[c(1, 4)])
 ```
 
 ## Structured Vecotrs
@@ -54,7 +56,8 @@ In this section, we talk about
 - matrix
 - data frame
 
-A list and an atomic vector share the common property of "a tuple of elements." A list differs an atomic vector in that each element (item) in a list can be **more complex stuff** but not limited to logical/integer/double/character value. Let's have an example
+A list and an atomic vector share the common property of "a tuple of elements." A list differs an atomic vector in that each element (item) in a list can be **more complex stuff** but not limited to logical/integer/double/character value. We use `a_list[[index]]` or `a_list[[item name]]` to have list items.
+Let's have an example
 ```{r}
 a_list <- list(item_1 = 1L:3L,
                item_2 = "I like R",
@@ -64,11 +67,14 @@ a_list <- list(item_1 = 1L:3L,
 print(names(a_list))
 print(length(a_list))
 print(lengths(a_list))
+print(a_list[[2]])
+print(a_list[["item_2"]])
 ```
 
-In R, a matrix is a vector plus more attributes, and a data frame is a list (but with more attributes). 
+In R, a matrix is a vector plus the *dimension attribute*, and a data frame is a list (but with more attributes). 
 
 - For matrix and data frame, we have the **row-and-column** concept. Columns 1-n in a data frame, correspond to items 1-n, respectively, in a list.
+- We can use `a_matrix[index_1, index_2]` to have values in a matrix.
 - All the columns in a matrix must have the same "structure"---e.g. if column 1 is an integer vector of length 5, then all the other columns must be integer vectors of length 5.
 - Columns in a data frame all have the same "length", but they can have different "structures"---e.g. column 1 is a double vector of length 6; column 2 is a character vector of length 6; column 3 is a logical vector of length 6.
 
@@ -86,10 +92,12 @@ In R, a matrix is a vector plus more attributes, and a data frame is a list (but
 print(dim(a_matrix))
 print(length(a_matrix))
 print(lengths(a_matrix))
+print(a_matrix[2:3, 1:2])
 (is.vector(a_matrix)) # this ONLY shows that matrix is NOT atomic vector
 print(dim(a_df))
 print(length(a_df))
 print(lengths(a_df))
+print(a_df[["ID"]])
 (names(a_df))
 (is.list(a_df))
 ```
