--- a/lesson_5.Rmd
+++ b/lesson_5.Rmd
@@ -67,7 +67,7 @@ get_sum_of_words <- function(word_vec)
 {unlist(lapply(word_vec, get_sum_of_a_word))
 }
 # testing
-get_sum_of_a_word("aabbcd")
+get_sum_of_a_word("aabbcde")
 get_sum_of_words(c('a', 'ab', 'abc'))
 ```
 
@@ -78,8 +78,7 @@ add_subtr_multi <- function(x, y, method = c("sum", "subtract", "multipliction")
  switch(method,
         "sum" = x + y,
         "subtract" = x - y,
-        "multipliction" = x * y,
-        stop("Invalid operation!"))
+        "multipliction" = x * y)
 }
 # testing
 add_subtr_multi(1, 2, "sum")
@@ -96,8 +95,7 @@ create_an_op <- function(op = c("sum", "subtract", "multipliction"))
    switch(op,
           "sum" = x + y,
           "subtract" = x - y,
-          "multipliction" = x * y,
-          stop("Invalid operation!"))
+          "multipliction" = x * y)
            
  }
 }
