--- a/lesson_6.Rmd
+++ b/lesson_6.Rmd
@@ -1,1 +1,51 @@
 # Lesson 6 R Packages {#L6}
+
+An R package basically is package of R functions plus metadata and documentations.
+
+```{r, include=FALSE}
+# base packages
+x <- sessionInfo()[[6]][c(7, 6, 1, 4, 2, 3, 5)]
+```
+
+Base R (the R that we download from CRAN) has at least these R packages
+
+- `r x[1]`
+- `r x[2]`
+- `r x[3]`
+- `r x[4]`
+- `r x[5]`
+- `r x[6]`
+- `r x[7]`
+
+We call all the other packages that not included in base R **extended R packages**. In this lesson, we will very briefly introduce some extended R packages, and then touch upon writing R packages.
+
+## Extended R Packages
+
+package name      | remarks
+:-----------------|:-------------------------------
+`tidyverse`       | a set of packages; for data manipulation/analysis/visualization
+`data.table`      | for data manipulation; enabling fast code
+`lubridate`       | for dealing with dates, times etc.
+`shiny`           | for creating shiny apps
+`bookdown`        | for writing books
+`blogdown`        | for creating web sites
+`devtools`        | for creating R packages
+
+**NB:** We can see all packages included in `tidyverse`
+```{r}
+tidy_pkgs <- tidyverse::tidyverse_packages(include_self = FALSE)
+print(tidy_pkgs)
+```
+We can Install all these packages in the tidyverse by running `install.packages("tidyverse")` .
+Among these `r length(tidy_pkgs)` packages, **ggplot2**, **dplyr**, **tidyr**,
+**readr**, **purrr**, **tibble**, **stringr**, and **forcats** are the so-called *core packages*, which will be loaded all together if we run `library(tidyverse)`. See this: https://www.tidyverse.org/packages/
+
+These articles may be of our interest:
+
+- https://support.posit.co/hc/en-us/articles/201057987-Quick-list-of-useful-R-packages
+- https://www.datacamp.com/tutorial/top-ten-most-important-packages-in-r-for-data-science
+
+
+
+## Writing R Packages
+
