--- a/lesson_2.Rmd
+++ b/lesson_2.Rmd
@@ -37,9 +37,10 @@ print(output)
 library(lubridate) # to use function days()
 how_old_in_days <- function(`birth_day_yyyy-mm-dd`)
 {today <- Sys.Date()
+ print(sprintf("Today is: %s.", today))
  life_in_days <- days(today - as.Date(`birth_day_yyyy-mm-dd`))
- print(life_in_days)
+ print(sprintf("Your life in days is: %s.", life_in_days))
 }
-how_old_in_days("2005-12-04") # today is "2022-12-25"
+how_old_in_days("2005-12-04") 
 ```
 
