--- a/lesson_5.Rmd
+++ b/lesson_5.Rmd
@@ -77,8 +77,8 @@ get_sum_of_words(c('a', 'ab', 'abc'))
 
 **Example:** using `match.arg()`
 ```{r}
-add_subtr_multi <- function(x, y, method = c("sum", "subtract", "multipliction"))
-{method <- match.arg(method)
+add_subtr_multi <- function(x, y, method = "sum")
+{method <- match.arg(method, c("sum", "subtract", "multipliction"))
  switch(method,
         "sum" = x + y,
         "subtract" = x - y,
@@ -93,8 +93,8 @@ add_subtr_multi(10, 10, "multipliction")
 
 **Example:** function factory
 ```{r}
-create_an_op <- function(op = c("sum", "subtract", "multipliction"))
-{op <- match.arg(op)
+create_an_op <- function(op)
+{op <- match.arg(op, c("sum", "subtract", "multipliction"))
  function(x, y) {
    switch(op,
           "sum" = x + y,
@@ -138,12 +138,8 @@ find_types <- function(x)
 }
 find_types.data.frame <- function(x)
 {vapply(x, typeof, character(1))
-} 
-find_types.data.table <- function(x)
-{x <- as.data.frame(x)
- find_types.data.frame(x)
-}  
-
+}
+find_types.tibble <- find_types.data.table <- find_types.data.frame
 # testing
 a_df <- data.frame(a = 1:5,
                    b = rnorm(5),
@@ -158,5 +154,13 @@ a_dt <- data.table::data.table(
   c = letters[1:5],
   d = c(TRUE, TRUE, FALSE, FALSE, TRUE))
 (find_types(a_dt))
+
+a_tibble <- tibble::tibble(
+  a = 1:5,
+  b = rnorm(5),
+  c = letters[1:5],
+  d = c(TRUE, TRUE, FALSE, FALSE, TRUE)
+)
+(find_types(a_tibble))
 ```
 
